--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "gh-pages -d dist/CubeBuilder"
   },
   "private": true,
+  "homepage": "https://hackder.github.io/CubeBuilder",
   "dependencies": {
     "@angular/animations": "~10.1.5",
     "@angular/common": "~10.1.5",
@@ -20,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@types/three": "^0.103.2",
+    "gh-pages": "^3.1.0",
     "ngx-color": "^6.0.4",
     "rxjs": "~6.6.0",
     "three": "^0.122.0",
