--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
   "private": true,
   "homepage": "https://hackder.github.io/CubeBuilder",
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
+    "@angular/animations": "^11.0.9",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
     "@types/three": "^0.103.2",
     "gh-pages": "^3.1.0",
-    "ngx-color": "^6.0.4",
+    "ngx-color": "^6.2.0",
     "rxjs": "~6.6.0",
     "three": "^0.122.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.0",
-    "@angular/cli": "^11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.1.4",
+    "@angular/compiler-cli": "^11.0.9",
+    "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.16",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
